--- a/activity2.html
+++ b/activity2.html
@@ -13,7 +13,7 @@
 
 <body class="bg-dark custom-text" style="position: relative;">
     <!-- HEADERS -->
-    <nav class="navbar" style="background-color: var(--primary);">
+    <nav class="navbar mt-1" style="background-color: var(--primary);">
         <div class="container-fluid">
             <div class="row justify-content-center w-100">
                 <a href="index.html" type="button"
@@ -22,13 +22,13 @@
         </div>
     </nav>
     <!-- SITE HEADER -->
-    <nav class="navbar navbar-expand-lg nav-design custom-text sticky-top">
+    <nav class="navbar navbar-expand-lg nav-design custom-text sticky-top" style="z-index: 999;">
         <div class="container-fluid">
             <a class="navbar-brand w-25" href="#"><img src="img/LOGO.png" alt="logo" class="img-fluid w-50"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon" style="background-color: var(--primary);"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end w-100 align-items-center">
@@ -61,12 +61,23 @@
                         <a class="nav-link justify-content-center d-flex" href="#"><img src="img/calltoaction.png"
                                 alt="calltoaction" class="img-fluid w-50"></a>
                     </li>
+                </ul>
             </div>
         </div>
     </nav>
     <!-- SITE HEADER -->
 
     <!-- HEADERS -->
+
+    <!-- SPLASH -->
+    <!-- <div class="custom-splash">
+        <div class="row w-100">
+            <div class="col bg-dark justify-content-center align-items-center d-flex custom-splash">
+                <img src="img/LOGO.png" alt="logo" class="img-fluid">
+            </div>
+        </div>
+    </div> -->
+    <!-- SPLASH -->
 
 
     <!-- CONTENT -->
@@ -252,7 +263,7 @@
             <div class="col-5 col-md p-5"><img src="img/background/bubble.png" alt="" class="img-fluid hovering_anim2">
             </div>
         </div>
-                <div class="row w-100">
+        <div class="row w-100">
             <div class="col-5 col-md p-5"></div>
             <div class="col-5 col-md p-5"><img src="img/background/bubble.png" alt="" class="img-fluid hovering_anim1">
             </div>
@@ -402,7 +413,7 @@
                         alt="hero_phone" class="img-fluid shadow-lg hero-subheading w-100"
                         style="border: 1px solid var(--primary2);">
                 </div>
-                <div class="col-12 col-md-6 appear_anim glassmorphism">
+                <div class="col-12 col-md-5 appear_anim glassmorphism">
                     <div class="card-body hero-subheading p-3 shadow-lg" style="border: 1px solid var(--primary2);">
                         <h1 class="text-start mb-5" style="color: var(--primary);">Why Us?</h1>
                         <h4 class="card-text text-light mb-5">Get your favorite meals delivered fast with QuickBites!
@@ -420,7 +431,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2"></div>
+                <div class="col"></div>
             </div>
         </div>
         <div class="content container-lg mb-5" id="Features">
@@ -596,39 +607,131 @@
             </div>
         </div>
 
-        <div class="reviews container-fluid mb-5" id="reviews">
+        <div class="reviews container-sm p-5 mb-5 appear_anim" id="reviews"
+            style="border: 2px solid var(--primary); border-radius: 50px; max-width: 90%;">
             <div class="row appear_anim">
                 <div class="col glassmorphism">
                     <h1 class="text-start mb-5" style="color: var(--primary);">Reviews</h1>
                 </div>
             </div>
             <div class="row">
-                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+                <div id="carouselExampleAutoplaying" class="carousel slide appear_anim" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-item active" style="padding-left: 10%; padding-right: 10%;">
+                            <div class="card-body justify-content-center d-flex flex-column p-3 bg-dark shadow-lg"
+                                style="border: 1px solid var(--primary2); border-radius: 20px;">
+                                <div class="row">
+                                    <h1 class="card-title mb-3 text-center" style="color: var(--primary);">Vergil Sparda
+                                    </h1>
+                                </div>
+                                <div class="row h-100">
+                                    <div class="col-12 col-xl">
+                                        <img src="img/vergil_review.png" alt="logo"
+                                            class="img-fluid object-fit-cover rounded w-100" style="max-height: 500px;">
+                                    </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                        <div class="row">
+                                            <h5 class="text-light">QuickBite delivers a satisfying experience with their
+                                                Hamburger—juicy, flavorful, and expertly crafted, all packed into a
+                                                convenient, hassle-free package. Whether you're craving a quick bite or
+                                                a full meal, this burger hits the spot, offering a delicious balance of
+                                                taste and convenience every time.</h5>
+                                            <div class="col">
+                                                <h1 style="color: var(--primary);"> ★ ★ ★ ★ ★</h1>
+                                            </div>
+                                        </div>
+                                        <div class="row" style="scale: -1;">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-item" style="padding-left: 10%; padding-right: 10%;">
+                            <div class="card-body justify-content-center d-flex flex-column p-3 bg-dark shadow-lg"
+                                style="border: 1px solid var(--primary2); border-radius: 20px;">
+                                <div class="row">
+                                    <h1 class="card-title mb-3 text-center" style="color: var(--primary);">Nero
+                                    </h1>
+                                </div>
+                                <div class="row h-100">
+                                    <div class="col-12 col-xl">
+                                        <img src="img/nero_review.jpeg" alt="logo"
+                                            class="img-fluid object-fit-cover rounded w-100" style="max-height: 500px;">
+                                    </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                        <div class="row">
+                                            <h5 class="text-light">QuickBite’s Milk Tea? It’s like taking a shot of pure
+                                                power in a cup—smooth, rich, and with a kick that’ll wake you up faster
+                                                than a demon slayer’s sword. With just the right balance of sweetness
+                                                and strength, it’s the kind of drink that gives you the fuel you need to
+                                                keep going, no matter how tough the fight gets.</h5>
+                                            <div class="col">
+                                                <h1 style="color: var(--primary);"> ★ ★ ★ ★ ★</h1>
+                                            </div>
+                                        </div>
+                                        <div class="row" style="scale: -1;">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-item" style="padding-left: 10%; padding-right: 10%;">
+                            <div class="card-body justify-content-center d-flex flex-column p-3 bg-dark shadow-lg"
+                                style="border: 1px solid var(--primary2); border-radius: 20px;">
+                                <div class="row">
+                                    <h1 class="card-title mb-3 text-center" style="color: var(--primary);">Nicoletta
+                                        Goldstein
+                                    </h1>
+                                </div>
+                                <div class="row h-100">
+                                    <div class="col-12 col-xl">
+                                        <img src="img/nico_review.jpeg" alt="logo"
+                                            class="img-fluid object-fit-cover rounded w-100" style="max-height: 500px;">
+                                    </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                        <div class="row">
+                                            <h5 class="text-light">This lasagna from QuickBite? Oh, honey, it’s like a
+                                                freakin’ masterpiece in a dish. Layers of flavor so rich, you’d think it
+                                                was crafted by a genius—just the right mix of cheesy goodness and savory
+                                                sauce that hits all the right spots, like a perfect weapon upgrade for
+                                                your taste buds.</h5>
+                                            <div class="col">
+                                                <h1 style="color: var(--primary);"> ★ ★ ★ ★ ★</h1>
+                                            </div>
+                                        </div>
+                                        <div class="row" style="scale: -1;">
+                                            <p style="color: var(--primary); font-size: 5rem;">،،</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
             </div>
         </div>
-        <div class="contact container-fluid mb-5" id="contact">
+        <div class="contact container-sm mb-5" id="contact">
             <div class="row appear_anim">
                 <div class="col glassmorphism">
                     <h1 class="text-start mb-5" style="color: var(--primary);">Get In Touch</h1>
@@ -637,13 +740,14 @@
             <div class="container-sm appear_anim">
                 <div class="row">
                     <div class="col-12 col-xl-5">
-                        <img src="img/LOGO.png" alt="logo">
+                        <img src="img/LOGO.png" alt="logo" class="img-fluid">
                     </div>
                     <div class="col col-xl-7">
                         <div class="card bg-dark w-100 h-100" style="border: 1px solid var(--primary2);">
                             <div class="card-body justify-content-center d-flex flex-column">
                                 <div class="row">
-                                    <h2 class="card-title mb-2" style="color: var(--primary);">Want to contact us?</h2>
+                                    <h2 class="card-title mb-5" style="color: var(--primary);">Want to contact us?
+                                    </h2>
                                 </div>
                                 <div class="row">
                                     <div class="col">
@@ -655,7 +759,7 @@
                                             aria-label="mobile input">
                                     </div>
                                     <div class="col">
-                                        <textarea class="form-control mb-2 text-start h-100" rows="5"
+                                        <textarea class="form-control mb-2 text-start h-75" rows="5"
                                             placeholder="Message" aria-label="Message input"></textarea>
                                     </div>
                                     <div class="row">
@@ -671,6 +775,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!-- CONTENT -->
 
@@ -707,12 +812,30 @@
                 <div class="col-12 col-md-4">
                     <h5 style="color: var(--primary);">Social Media</h5>
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb p-0 mb-0">
-                            <li class="breadcrumb-item"><a href="index.html" class="text-white">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#" class="text-white">Acitvity 1</a></li>
-                            <li class="breadcrumb-item"><a href="activity2.html" class="text-white">Acitvity 2</a></li>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item d-flex align-items-center">
+                                <img src="img/facebook-logo.png" alt="Facebook"
+                                    style="width:20px; height:20px; margin-right:8px;">
+                                <a href="#" class="text-white">Facebook</a>
+                            </li>
+                            <li class="breadcrumb-item d-flex align-items-center">
+                                <img src="img/instagram-logo.png" alt="Instagram"
+                                    style="width:20px; height:20px; margin-right:8px;">
+                                <a href="#" class="text-white">Instagram</a>
+                            </li>
+                            <li class="breadcrumb-item d-flex align-items-center">
+                                <img src="img/twitter-logo.png" alt="Twitter"
+                                    style="width:20px; height:20px; margin-right:8px;">
+                                <a href="#" class="text-white">Twitter</a>
+                            </li>
+                            <li class="breadcrumb-item d-flex align-items-center">
+                                <img src="img/tiktok-logo.png" alt="TikTok"
+                                    style="width:20px; height:20px; margin-right:8px;">
+                                <a href="#" class="text-white">TikTok</a>
+                            </li>
                         </ol>
                     </nav>
+
                 </div>
             </div>
         </div>
@@ -726,5 +849,15 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
+<!-- <script>
+    window.addEventListener('load', function () {
+        window.scrollTo(0, 0)
+        document.body.style.overflow = 'hidden'
+
+        setTimeout(function () {
+            document.body.style.overflow = 'auto'
+        }, 5000)
+    })
+</script> -->
 
 </html>
