--- a/activity2.html
+++ b/activity2.html
@@ -70,13 +70,16 @@
     <!-- HEADERS -->
 
     <!-- SPLASH -->
-    <!-- <div class="custom-splash">
-        <div class="row w-100">
-            <div class="col bg-dark justify-content-center align-items-center d-flex custom-splash">
-                <img src="img/LOGO.png" alt="logo" class="img-fluid">
+    <div class="custom-splash">
+        <div class="row">
+            <div class="row w-100">
+                <div class="col bg-dark justify-content-center align-items-center d-flex custom-splash">
+                    <img src="img/LOGO.png" alt="logo" class="img-fluid custom-splash2">
+                </div>
+                <div class="col justify-content-center align-items-center d-flex custom-splash custom-splash3"><div class=" custom-splash3-text">QUICKBITE</div></div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- SPLASH -->
 
 
@@ -396,7 +399,7 @@
     </div>
     <!-- BUBBLY BUBBLY BUBBLY BUBBLY -->
     <section class="site">
-        <div class="hero container-fluid mb-5">
+        <div class="hero container-fluid mt-5">
             <div class="row w-100 mb-5">
                 <div class="col-12 col-md-3 hero-text2 bg-dark shadow-lg" style="border: 1px solid var(--primary2);">
                     <h1 class="text-light text-start">"Your Favorite Meals"</h1>
@@ -434,7 +437,7 @@
                 <div class="col"></div>
             </div>
         </div>
-        <div class="content container-lg mb-5" id="Features">
+        <div class="content container-lg mt-5" id="Features">
             <div class="row appear_anim">
                 <div class="col">
                     <h1 class="text-start mb-5" style="color: var(--primary);">Features</h1>
@@ -485,7 +488,7 @@
                 </div>
             </div>
         </div>
-        <div class="how_it_works container-sm mb-5" id="how_it_works">
+        <div class="how_it_works container-sm mt-5" id="how_it_works">
             <div class="row appear_anim">
                 <div class="col">
                     <h1 class="text-start mb-5" style="color: var(--primary);">How It Works</h1>
@@ -549,7 +552,7 @@
             </div>
         </div>
 
-        <div class="sponsor container-fluid mb-5" id="sponsor">
+        <div class="sponsor container-fluid mt-5" id="sponsor">
             <div class="row appear_anim">
                 <div class="col glassmorphism">
                     <h1 class="text-start mb-1 text-center" style="color: var(--primary);">Music Video From Famous Kpop
@@ -607,7 +610,7 @@
             </div>
         </div>
 
-        <div class="reviews container-sm p-5 mb-5 appear_anim" id="reviews"
+        <div class="reviews container-sm p-5 mt-5 appear_anim" id="reviews"
             style="border: 2px solid var(--primary); border-radius: 50px; max-width: 90%;">
             <div class="row appear_anim">
                 <div class="col glassmorphism">
@@ -731,7 +734,7 @@
                 </div>
             </div>
         </div>
-        <div class="contact container-sm mb-5" id="contact">
+        <div class="contact container-sm mb-5 mt-5" id="contact">
             <div class="row appear_anim">
                 <div class="col glassmorphism">
                     <h1 class="text-start mb-5" style="color: var(--primary);">Get In Touch</h1>
@@ -849,15 +852,15 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
-<!-- <script>
+<script>
     window.addEventListener('load', function () {
         window.scrollTo(0, 0)
         document.body.style.overflow = 'hidden'
 
         setTimeout(function () {
             document.body.style.overflow = 'auto'
-        }, 5000)
+        }, 8000)
     })
-</script> -->
+</script>
 
 </html>
