--- a/activity2.html
+++ b/activity2.html
@@ -76,7 +76,9 @@
                 <div class="col bg-dark justify-content-center align-items-center d-flex custom-splash">
                     <img src="img/LOGO.png" alt="logo" class="img-fluid custom-splash2">
                 </div>
-                <div class="col justify-content-center align-items-center d-flex custom-splash custom-splash3"><div class=" custom-splash3-text">QUICKBITE</div></div>
+                <div class="col justify-content-center align-items-center d-flex custom-splash custom-splash3">
+                    <div class=" custom-splash3-text">QUICKBITE</div>
+                </div>
             </div>
         </div>
     </div>
@@ -847,20 +849,20 @@
         </div>
     </section>
     <!-- FOOTER -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+        crossorigin="anonymous"></script>
+    <script>
+        window.addEventListener('load', function () {
+            window.scrollTo(0, 0)
+            document.body.style.overflow = 'hidden'
+
+            setTimeout(function () {
+                document.body.style.overflow = 'auto'
+            }, 8000)
+        })
+    </script>
 </body>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-    crossorigin="anonymous"></script>
-<script>
-    window.addEventListener('load', function () {
-        window.scrollTo(0, 0)
-        document.body.style.overflow = 'hidden'
-
-        setTimeout(function () {
-            document.body.style.overflow = 'auto'
-        }, 8000)
-    })
-</script>
 
 </html>
